# schoolfes-lottery-roulette

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  quality.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/storage/: mod.rs
src/lib/: appInfo.ts  appState.svelte.ts  appStorage.ts  bootstrap.ts  licenses.ts  lottery.test.ts  lottery.ts  openExternalUrl.ts  project.test.ts  project.ts  theme.ts  windowTitle.ts
src/lib/components/: AppDialog.svelte  AppPanel.svelte  LotteryControls.svelte  LotterySettings.svelte  NixieDisplay.svelte  ProjectSelector.svelte  ResultsPanel.svelte
src/lib/components/settings/: PrizesEditor.svelte  SettingsAbout.svelte  SettingsDigitOrder.svelte  SettingsLauncher.svelte  SettingsLicenses.svelte  SettingsTheme.svelte
src/lib/persistence/: autoSave.ts
src/lib/services/: dialogService.svelte.ts  lotteryController.ts  nixieController.svelte.ts  projectManager.ts
src/lib/storage/: prizesParser.ts  projectsStorage.ts  resultsStorage.ts  settingsStorage.ts  storage.test.ts  storageKeys.ts
src/lib/styles/: base.css  components.css  themes.css  tokens.css
src/lib/tauri/: commands.ts
src/lib/utils/: debounce.ts
src/routes/: +layout.svelte  +page.svelte
